# little-RISC

./: .gitignore  CMakeLists.txt  CMakePresets.json
little-RISC/: CMakeLists.txt  config.h  core.cpp  core.h  emulator.cpp  emulator.h  instructions.h  little-RISC.cpp  little-RISC.h  memory.cpp  memory.h
